# api_libros

./: .gitignore  README.md  books.sqlite3
back/: __init__.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
back/dependencies/: db.py
back/static/: app.js  index.html
front/: main.js  pack.js  package.json
front/routes/: index.js
front/state/: app.js  index.js
front/views/: AuthorsByCat.js  BooksByAuthor.js  BooksByCat.js  BooksByPublisher.js  index.js
front/views/utils/: index.js
