[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Giovanny Baron <obaron@mabtec.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.1"}
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
